광물 연금술 추가, 아이템 및 확률 데이터 추가